gateway/single-service-gateway/gateway.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: simple-gateway
  namespace: gateway-demo
spec:
  class: istio
  listeners:
  - port: 80
    protocol: HTTP
    routes:
      resource: httproutes
