gateway/single-service-gateway/httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: simple-route
  namespace: gateway-demo
spec:
  hosts:
  - hostnames: ["*"]
    rules:
    - action:
        forwardTo:
        - targetRef:
            name: foo-svc
